--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@ main {
   max-width: 1599px;
   max-height: 4514px;
   flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -64,7 +65,6 @@ header {
   gap: 65px;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid black;
 }
 
 .nav_ul {
@@ -72,9 +72,12 @@ header {
 }
 
 .nav_a {
+  display: flex;
   text-decoration: none;
   color: black;
-  border: 1px;
+  width: 50px;
+  height: 27px;
+  padding: 0px 5px 2px 0px;
 }
 
 .account {
@@ -401,5 +404,344 @@ header {
   height: 18px;
   gap: 0px;
   opacity: 0px;
+  color: #151618;
+}
+
+.blog_button {
+  display: flex;
+  max-width: 149px;
+  height: 51px;
+  gap: 10px;
+  border: 1px solid #151618;
+  text-align: center;
+}
+
+.blog_btn {
+  width: 100%;
+  height: 100%;
+  padding: 12px 41px 12px 41px;
+  gap: 10px;
+}
+
+.span_btn {
+  display: flex;
+  width: 67px;
+  height: 27px;
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 27.24px;
+  text-align: left;
+  color: #151618;
+}
+
+.subscribe {
+  display: flex;
+  max-width: 1600px;
+  width: 100%;
+  height: 418px;
+  margin-top: 150px;
+  background-color: #f7f2ea;
+  background-image: url(/img/sub_pic.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.sub_text {
+  display: flex;
+  max-width: 580px;
+  height: 200px;
+  flex-direction: column;
+  gap: 48px;
+  margin-top: 100px;
+  margin-left: 200px;
+  justify-content: space-between;
+}
+
+.sub_text_1 {
+  font-family: Cormorant;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48.44px;
+  text-align: left;
+  color: #151618;
+}
+
+.sub_text_2 {
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 30px;
+  text-align: left;
+  color: #151618;
+}
+
+.sub_form {
+  display: flex;
+  max-width: 580px;
+  height: 117px;
+  margin-top: 198px;
+  margin-left: 40px;
+}
+
+.sub_input {
+  width: 161px;
+  height: 30px;
+  margin-top: 18px;
+  margin-left: 15px;
+  color: #b8b58b;
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 30px;
+  text-align: left;
+  background: transparent;
+  border: 0px;
+}
+
+.sub_btn {
+  display: flex;
+  width: 116px;
+  height: 51px;
+  margin-left: 288px;
+  gap: 10px;
+  border: 1px solid black;
+  opacity: 0px;
+}
+
+.sub_btn_text {
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 27.24px;
+  text-align: left;
+  color: #151618;
+  padding: 12px 41px 12px 41px;
+}
+
+.sub_img {
+  display: flex;
+  height: 1px;
+  margin-top: 50px;
+  margin-left: -575px;
+}
+
+.sub_checkbox {
+  width: 10px;
+  height: 10px;
+  margin-top: 60px;
+  margin-left: -220px;
+  border: 1px 0px 0px 0px;
+  border: 1px solid #151618;
+  color: #ffffff;
+}
+
+.checkbox_text {
+  display: flex;
+  width: 560px;
+  height: 54px;
+  margin-top: 57px;
+  margin-left: 10px;
+  font-family: Open Sans;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 17.7px;
+  text-align: left;
+  color: #151618;
+}
+
+.prioritise {
+  display: flex;
+  max-width: 1199px;
+  height: 286px;
+  margin-top: 150px;
+  width: 100%;
+  flex-direction: column;
+  gap: 0px;
+}
+
+.prioritise_text {
+  display: flex;
+  width: 207px;
+  height: 47.96px;
+  margin-left: 497px;
+  font-family: Cormorant;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48.44px;
+  text-align: left;
+  color: #151618;
+}
+
+.prioritise_frame {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1199px;
+  height: 178px;
+  margin-top: 60.04px;
+  gap: 49px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.prioritise_frame_1 {
+  display: flex;
+  flex-direction: column;
+  width: 248px;
+  height: 178px;
+}
+
+.frame_text_1 {
+  font-family: Open Sans;
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 40.85px;
+  text-align: center;
+  width: 100%;
+  height: 41px;
+  color: #151618;
+}
+
+.frame_text_2 {
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 27.24px;
+  text-align: left;
+  color: #151618;
+  width: 100%;
+  height: 27px;
+  margin-top: 10.03px;
+  text-align: center;
+}
+
+.frame_pic {
+  width: 60px;
+  height: 60px;
+  margin-top: 39.97px;
+  margin-left: 102px;
+}
+
+.prirotise_frame_2 {
+  display: flex;
+  flex-direction: column;
+  width: 257px;
+  height: 178px;
+}
+
+.prirotise_frame_3 {
+  display: flex;
+  flex-direction: column;
+  width: 294px;
+  height: 170px;
+}
+
+.footer {
+  display: flex;
+  max-width: 1600px;
+  height: 593px;
+  background-color: #f7f2ea;
+  margin-top: 150px;
+}
+
+.footer_info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 1600px;
+  height: 400px;
+  margin-top: 100px;
+}
+
+.footer_menu {
+  display: flex;
+  flex-direction: column;
+  width: 97px;
+  height: 269px;
+  margin-left: 200px;
+  gap: 50px;
+}
+
+.footer_menu_text {
+  width: 84px;
+  height: 29px;
+  font-family: Cormorant;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29.06px;
+  text-align: left;
+  color: #151618;
+}
+
+.menu_ul {
+  display: flex;
+  flex-direction: column;
+  width: 97px;
+  height: 190px;
+  gap: 20px;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+.menu_a {
+  width: 100%;
+  font-family: Open Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 21.79px;
+  text-align: left;
+  color: #151618;
+  text-decoration: none;
+}
+
+.footer_menu_comp {
+  display: flex;
+  flex-direction: column;
+  width: 97px;
+  height: 269px;
+  margin-left: 213px;
+  gap: 50px;
+}
+
+.menu_ul_comp {
+  display: flex;
+  flex-direction: column;
+  width: 155px;
+  height: 274px;
+  gap: 20px;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+.quatation {
+  display: flex;
+  width: 269px;
+  height: 162px;
+  margin-top: 79px;
+  margin-left: 155px;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.quatation_text_1 {
+  width: 269px;
+  height: 110px;
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 21.79px;
+  text-align: left;
+  color: #151618;
+}
+
+.quatation_text_2 {
+  width: 129px;
+  height: 32px;
+  font-family: Open Sans;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 16.34px;
+  text-align: left;
   color: #151618;
 }
