--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,7 +81,7 @@ header {
   display: flex;
   text-decoration: none;
   color: black;
-  width: 50px;
+  width: 60px;
   height: 27px;
   padding: 0px 5px 2px 0px;
   font-family: Open Sans;
@@ -202,6 +202,7 @@ header {
   margin-bottom: 150px;
   margin-top: 150px;
   align-items: center;
+  
 }
 
 .teas_text {
@@ -231,6 +232,7 @@ header {
   display: flex;
   flex-direction: row;
   width: 100%;
+  justify-content: center;
 }
 
 .teas_li {
@@ -470,12 +472,11 @@ header {
 .sub_text {
   display: flex;
   max-width: 580px;
-  height: 200px;
+  height: 100%;
   flex-direction: column;
   gap: 48px;
   margin-top: 100px;
   margin-left: 200px;
-  justify-content: space-between;
 }
 
 .sub_text_1 {
@@ -620,9 +621,11 @@ header {
   flex-direction: column;
   width: 248px;
   height: 178px;
+  align-items: center;
 }
 
 .frame_text_1 {
+  display: flex;
   font-family: Open Sans;
   font-size: 30px;
   font-weight: 300;
@@ -631,40 +634,51 @@ header {
   width: 100%;
   height: 41px;
   color: #151618;
+  justify-content:center;
 }
 
 .frame_text_2 {
+  display: flex;
   font-family: Open Sans;
   font-size: 20px;
   font-weight: 600;
   line-height: 27.24px;
-  text-align: left;
   color: #151618;
-  width: 100%;
+  width: 294px;
   height: 27px;
   margin-top: 10.03px;
-  text-align: center;
+  justify-content: center;
+  justify-content:center;
 }
 
 .frame_pic {
   width: 60px;
   height: 60px;
   margin-top: 39.97px;
-  margin-left: 102px;
 }
 
-.prirotise_frame_2 {
+.prioritise_frame_2 {
   display: flex;
   flex-direction: column;
   width: 257px;
   height: 178px;
+  align-items: center;
 }
 
-.prirotise_frame_3 {
+.prioritise_frame_3 {
   display: flex;
   flex-direction: column;
   width: 294px;
   height: 170px;
+  align-items: center;
+}
+
+.prioritise_frame_4 {
+  display: flex;
+  flex-direction: column;
+  width: 248px;
+  height: 178px;
+  align-items: center;
 }
 
 .footer {
@@ -756,6 +770,7 @@ header {
 }
 
 .quatation_text_1 {
+  display: flex;
   width: 269px;
   height: 110px;
   font-family: Open Sans;
@@ -768,6 +783,7 @@ header {
 }
 
 .quatation_text_2 {
+  display: flex;
   width: 129px;
   height: 32px;
   font-family: Open Sans;
@@ -1135,6 +1151,7 @@ header {
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content: center;
   }
   .testimonials {
     display: flex;
@@ -1188,6 +1205,8 @@ header {
     flex-wrap: wrap;
     width: 100%;
     height: 500px;
+    gap: 40px;
+    justify-content: flex-start;
   }
   .article_1 {
     display: flex;
@@ -1221,12 +1240,13 @@ header {
     color: #151618;
   }
   .article_text_2 {
+    display: flex;
     font-family: Open Sans;
     font-size: 13px;
     font-weight: 300;
     line-height: 17.7px;
     text-align: left;
-    width: 118px;
+    width: 169px;
     height: 18px;
     gap: 0px;
     opacity: 0px;
@@ -1234,7 +1254,9 @@ header {
     color: #151618;
   }
   .article_read {
+    display: flex;
     text-decoration: none;
+    flex-direction: row;
     font-family: Open Sans;
     font-size: 13px;
     font-weight: 300;
@@ -1247,4 +1269,704 @@ header {
     color: #151618;
     margin-top: 21px;
   }
+  .right {
+    display: flex;
+    width: 5px;
+    height: 10px;
+    margin-top: 4px;
+    margin-left: 8px;
+  }
+  .subscribe {
+    display: flex;
+    max-width: 1000px;
+    width: 100%;
+    height: 495px;
+    margin-top: 120px;
+    background-color: #f7f2ea;
+    background-image: url(/img/sub_pic.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    flex-direction: column;
+  }
+  .sub_text {
+    display: flex;
+    max-width: 780px;
+    height: 200px;
+    flex-direction: column;
+    margin: 60px 110px 0px 110px;
+    justify-content: flex-start;
+    gap: 0px;
+    align-items: center;
+  }
+  .sub_text_1 {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+    color: #151618;
+    margin-bottom: 60px;
+  }
+  .sub_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: left;
+    color: #151618;
+    text-align: center;
+    width: 780px;
+  }
+  .sub_form {
+    display: flex;
+    max-width: 580px;
+    height: 117px;
+    margin-top: 60px;
+    margin-left: 210px;
+    flex-direction: column;
+  }
+  .prioritise {
+    display: flex;
+    max-width: 757px;
+    height: 489px;
+    margin-top: 120px;
+    width: 100%;
+    flex-direction: column;
+    gap: 0px;
+    align-items: center;
+  }
+  .prioritise_text {
+    display: flex;
+    width: 207px;
+    height: 47.96px;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    color: #151618;
+    margin-left: 0px;
+  }
+  .prioritise_frame {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    height: 100%;
+    margin-top: 60px;
+    row-gap: 30px;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .prioritise_frame_1 {
+    display: flex;
+    flex-direction: column;
+    width: 248px;
+    height: 178px;
+    margin-right: auto;
+    margin-left: 33px;
+    align-items: center;
+  }
+
+  .frame_text_1 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 40.85px;
+    text-align: center;
+    width: 100%;
+    height: 41px;
+    color: #151618;
+    justify-content:center;
+  }
+  .frame_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    color: #151618;
+    width: 294px;
+    height: 27px;
+    margin-top: 10.03px;
+    justify-content: center;
+    justify-content:center;
+    font-style: big;
+  }
+  .prioritise_frame_3 {
+    display: flex;
+    flex-direction: column;
+    width: 294px;
+    height: 170px;
+    margin-right: auto;
+  }
+  .frame_pic_3 {
+    display: flex;
+    margin-left: 25px;
+  }
+  .footer {
+    display: flex;
+    max-width: 1000px;
+    height: 593px;
+    background-color: #f7f2ea;
+    margin-top: 120px;
+    flex-direction: column;
+  }
+  .footer_info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 400px;
+    margin-top: 100px;
+  }
+  .footer_menu {
+    display: flex;
+    flex-direction: column;
+    width: 97px;
+    height: 269px;
+    margin-left: 20px;
+    gap: 50px;
+  }
+  .footer_menu_comp {
+    display: flex;
+    flex-direction: column;
+    width: 155px;
+    height: 353px;
+    margin-left: 60px;
+    gap: 50px;
+  }
+  .quatation {
+    display: flex;
+    width: 269px;
+    height: 162px;
+    margin-top: 0px;
+    margin-left: 54px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .contacts {
+    display: flex;
+    width: 270px;
+    height: 287px;
+    margin-left: 55px;
+    flex-direction: column;
+  }
+  .footer_bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 314px;
+    height: 22px;
+    margin-top: 55px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+  
+}
+
+@media (max-width: 768px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    max-width: 768px;
+  }
+  main {
+    display: flex;
+    gap: 0px;
+    opacity: 0px;
+    max-width: 768px;
+    max-height: 5468px;
+    flex-direction: column;
+    align-items: center;
+  }
+  header {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+  .header_menu {
+    display: flex;
+    max-width: 640px;
+    height: 105px;
+    gap: 75px;
+    margin: 30px 20px 0 20px;
+    justify-content: space-between;
+    padding-top: 0;
+  }
+  .header_picture {
+    display: flex;
+    max-width: 1000px;
+    height: 500px;
+    margin-top: 30px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0) 40.1%, #000000 97.4%),
+      url(/img/background_1000\ .png);
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat;
+  }
+  .logo {
+    display: flex;
+    width: 73.2px;
+    height: 105px;
+  }
+  .nav_menu {
+    display: flex;
+    width: 582px;
+    height: 27px;
+    margin-top: 39px;
+    gap: 65px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav_ul {
+    list-style-type: none;
+  }
+
+  .nav_a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    width: 57px;
+    height: 27px;
+    padding: 0px 5px 2px 0px;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.51px;
+    text-align: left;
+  }
+  .account {
+    display: flex;
+    width: 130px;
+    height: 29px;
+    margin-top: 38px;
+    gap: 50px;
+    justify-content: flex-start;
+  }
+  .acc {
+    display: flex;
+    flex-direction: row;
+    width: 58px;
+    height: 29px;
+    gap: 20px;
+  }
+  .search {
+    display: flex;
+    width: 22px;
+    height: 22px;
+    margin-left: 0px;
+  }
+  .header_text {
+    display: flex;
+    margin: 254px 609.62px 48px 18.87px;
+    width: 789.51px;
+    height: 120px;
+    opacity: 0px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .citation {
+    display: flex;
+    max-width: 744px;
+    height: 111px;
+    margin-top: 120px;
+  }
+  .teas {
+    display: flex;
+    width: 960px;
+    max-height: 325px;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 120px;
+    margin-top: 120px;
+    align-items: center;
+  }
+  .teas_text {
+    display: flex;
+    width: 369px;
+    height: 48px;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+  }
+  .teas_pic {
+    display: flex;
+    width: 960px;
+    height: 247px;
+    margin-top: 30px;
+    gap: 0px;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .teas_li {
+    display: flex;
+    flex-direction: column;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    color: #000000;
+    text-align: center;
+    width: 208px;
+    height: 247px;
+    gap: 0px;
+  }
+  .teas_li:not(:first-child) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-30px);
+  }
+  .teas_li:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-40px);
+  }
+  .teas_li:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-55px);
+  }
+  .teas_li:nth-child(5) {
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-65px);
+  }
+  .tea_pic {
+    display: flex;
+    max-width: 208px;
+    max-height: 208px;
+    gap: 0px;
+  }
+  .teas_ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+  }
+  .testimonials {
+    display: flex;
+    width: 100%;
+    height: 397px;
+    gap: 0px;
+    opacity: 0.5px;
+    background: #f7f2ea;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .testi {
+    display: flex;
+    flex-direction: row;
+    max-width: 892px;
+    height: 169px;
+    opacity: 0px;
+    justify-content: space-around;
+    margin-bottom: 60px;
+  }
+  .testi_li {
+    max-width: 280px;
+    height: 169px;
+    opacity: 0px;
+    flex-direction: column;
+  }
+  .testi_li:last-child {
+    display: none;
+    max-width: 280px;
+    height: 169px;
+    opacity: 0px;
+    flex-direction: column;
+  }
+  .blog {
+    display: flex;
+    max-width: 940px;
+    height: 592px;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    left: 200px;
+    gap: 60px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    flex-direction: column;
+    margin-top: 150px;
+  }
+  .blog_article {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 500px;
+    gap: 40px;
+    justify-content: flex-start;
+  }
+  .article_1 {
+    display: flex;
+    flex-direction: row;
+    max-width: 460px;
+    height: 153px;
+    row-gap: 20px;
+    opacity: 0px;
+    justify-content: flex-start;
+  }
+  .article_1_pic {
+    width: 230px;
+    height: 153px;
+  }
+  .blog_div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 180px;
+    height: 150px;
+  }
+  .article_text_1 {
+    display: flex;
+    width: 210px;
+    height: 86px;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    color: #151618;
+  }
+  .article_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+    width: 169px;
+    height: 18px;
+    gap: 0px;
+    opacity: 0px;
+    margin-top: 10px;
+    color: #151618;
+  }
+  .article_read {
+    display: flex;
+    text-decoration: none;
+    flex-direction: row;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+    width: 43px;
+    height: 18px;
+    gap: 0px;
+    opacity: 0px;
+    color: #151618;
+    margin-top: 21px;
+  }
+  .right {
+    display: flex;
+    width: 5px;
+    height: 10px;
+    margin-top: 4px;
+    margin-left: 8px;
+  }
+  .subscribe {
+    display: flex;
+    max-width: 1000px;
+    width: 100%;
+    height: 495px;
+    margin-top: 120px;
+    background-color: #f7f2ea;
+    background-image: url(/img/sub_pic.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    flex-direction: column;
+  }
+  .sub_text {
+    display: flex;
+    max-width: 780px;
+    height: 200px;
+    flex-direction: column;
+    margin: 60px 110px 0px 110px;
+    justify-content: flex-start;
+    gap: 0px;
+    align-items: center;
+  }
+  .sub_text_1 {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    text-align: left;
+    color: #151618;
+    margin-bottom: 60px;
+  }
+  .sub_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: left;
+    color: #151618;
+    text-align: center;
+    width: 780px;
+  }
+  .sub_form {
+    display: flex;
+    max-width: 580px;
+    height: 117px;
+    margin-top: 60px;
+    margin-left: 210px;
+    flex-direction: column;
+  }
+  .prioritise {
+    display: flex;
+    max-width: 757px;
+    height: 489px;
+    margin-top: 120px;
+    width: 100%;
+    flex-direction: column;
+    gap: 0px;
+    align-items: center;
+  }
+  .prioritise_text {
+    display: flex;
+    width: 207px;
+    height: 47.96px;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48.44px;
+    color: #151618;
+    margin-left: 0px;
+  }
+  .prioritise_frame {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    height: 100%;
+    margin-top: 60px;
+    row-gap: 30px;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .prioritise_frame_1 {
+    display: flex;
+    flex-direction: column;
+    width: 248px;
+    height: 178px;
+    margin-right: auto;
+    margin-left: 33px;
+    align-items: center;
+  }
+
+  .frame_text_1 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 40.85px;
+    text-align: center;
+    width: 100%;
+    height: 41px;
+    color: #151618;
+    justify-content:center;
+  }
+  .frame_text_2 {
+    display: flex;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    color: #151618;
+    width: 294px;
+    height: 27px;
+    margin-top: 10.03px;
+    justify-content: center;
+    justify-content:center;
+    font-style: big;
+  }
+  .prioritise_frame_3 {
+    display: flex;
+    flex-direction: column;
+    width: 294px;
+    height: 170px;
+    margin-right: auto;
+  }
+  .frame_pic_3 {
+    display: flex;
+    margin-left: 25px;
+  }
+  .footer {
+    display: flex;
+    max-width: 1000px;
+    height: 593px;
+    background-color: #f7f2ea;
+    margin-top: 120px;
+    flex-direction: column;
+  }
+  .footer_info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 400px;
+    margin-top: 100px;
+  }
+  .footer_menu {
+    display: flex;
+    flex-direction: column;
+    width: 97px;
+    height: 269px;
+    margin-left: 20px;
+    gap: 50px;
+  }
+  .footer_menu_comp {
+    display: flex;
+    flex-direction: column;
+    width: 155px;
+    height: 353px;
+    margin-left: 60px;
+    gap: 50px;
+  }
+  .quatation {
+    display: flex;
+    width: 269px;
+    height: 162px;
+    margin-top: 0px;
+    margin-left: 54px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .contacts {
+    display: flex;
+    width: 270px;
+    height: 287px;
+    margin-left: 55px;
+    flex-direction: column;
+  }
+  .footer_bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 314px;
+    height: 22px;
+    margin-top: 55px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+  
 }
