--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1416,7 +1416,7 @@ header {
   .footer_info {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
     height: 400px;
     margin-top: 100px;
