--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,6 @@ header {
   height: 142px;
   padding-top: 30px;
   margin: auto;
-  gap: 250px;
   opacity: 0px;
   justify-content: space-between;
 }
@@ -71,6 +70,8 @@ header {
   gap: 65px;
   justify-content: space-around;
   align-items: center;
+  margin-left: 235.18px;
+  margin-right: 124.62px;
 }
 
 .nav_ul {
@@ -124,7 +125,6 @@ header {
   display: flex;
   width: 22px;
   height: 22px;
-  margin-left: 100px;
 }
 
 .search_pic {
@@ -145,6 +145,7 @@ header {
 }
 
 .text_1 {
+  display: flex;
   font-family: Cormorant;
   font-size: 60px;
   font-weight: 400;
@@ -157,6 +158,7 @@ header {
 }
 
 .text_2 {
+  display: flex;
   font-family: Cormorant;
   font-size: 24px;
   font-weight: 400;
@@ -184,6 +186,7 @@ header {
 }
 
 .citation_text {
+  display: flex;
   font-family: Cormorant;
   font-size: 40px;
   font-style: italic;
@@ -202,7 +205,6 @@ header {
   margin-bottom: 150px;
   margin-top: 150px;
   align-items: center;
-  
 }
 
 .teas_text {
@@ -634,7 +636,7 @@ header {
   width: 100%;
   height: 41px;
   color: #151618;
-  justify-content:center;
+  justify-content: center;
 }
 
 .frame_text_2 {
@@ -648,7 +650,7 @@ header {
   height: 27px;
   margin-top: 10.03px;
   justify-content: center;
-  justify-content:center;
+  justify-content: center;
 }
 
 .frame_pic {
@@ -961,7 +963,78 @@ header {
   align-items: center;
 }
 
+.burger {
+  display: none;
+}
+
+@media (max-width: 1200px){
+  .header_menu {
+    display: flex;
+    max-width: 960px;
+    height: 105px;
+    margin: 30px 20px 0 20px;
+    padding-top: 0;
+  }
+  .logo {
+    display: flex;
+    width: 73.2px;
+    height: 105px;
+  }
+  .nav_menu {
+    display: flex;
+    width: 582px;
+    height: 27px;
+    margin-top: 39px;
+    gap: 65px;
+    margin-left: 58.8px;
+    margin-right: 116px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav_ul {
+    list-style-type: none;
+  }
+
+  .nav_a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    width: 57px;
+    height: 27px;
+    padding: 0px 5px 2px 0px;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.51px;
+    text-align: left;
+  }
+  .account {
+    display: flex;
+    width: 130px;
+    height: 29px;
+    margin-top: 38px;
+    gap: 50px;
+    justify-content: flex-start;
+  }
+  .acc {
+    display: flex;
+    flex-direction: row;
+    width: 58px;
+    height: 29px;
+    gap: 20px;
+  }
+  .search {
+    display: flex;
+    width: 22px;
+    height: 22px;
+    margin-left: 0px;
+  }
+}
+
 @media (max-width: 1000px) {
+  .burger {
+    display: none;
+  }
   body {
     display: flex;
     flex-direction: column;
@@ -980,15 +1053,13 @@ header {
     display: flex;
     flex-direction: column;
     height: 665px;
-    width: 100%;
+    max-width: 1000px;
   }
   .header_menu {
     display: flex;
     max-width: 960px;
     height: 105px;
-    gap: 75px;
     margin: 30px 20px 0 20px;
-    justify-content: space-between;
     padding-top: 0;
   }
   .header_picture {
@@ -1013,6 +1084,8 @@ header {
     height: 27px;
     margin-top: 39px;
     gap: 65px;
+    margin-left: 58.8px;
+    margin-right: 116px;
     justify-content: space-between;
     align-items: center;
   }
@@ -1152,6 +1225,7 @@ header {
     flex-direction: row;
     width: 100%;
     justify-content: center;
+    margin-left: 20px;
   }
   .testimonials {
     display: flex;
@@ -1378,7 +1452,7 @@ header {
     width: 100%;
     height: 41px;
     color: #151618;
-    justify-content:center;
+    justify-content: center;
   }
   .frame_text_2 {
     display: flex;
@@ -1391,7 +1465,7 @@ header {
     height: 27px;
     margin-top: 10.03px;
     justify-content: center;
-    justify-content:center;
+    justify-content: center;
     font-style: big;
   }
   .prioritise_frame_3 {
@@ -1463,7 +1537,6 @@ header {
     margin-left: 20px;
     margin-bottom: 10px;
   }
-  
 }
 
 @media (max-width: 768px) {
@@ -1478,6 +1551,7 @@ header {
     opacity: 0px;
     max-width: 768px;
     max-height: 5468px;
+    height: 100%;
     flex-direction: column;
     align-items: center;
   }
@@ -1491,35 +1565,31 @@ header {
     display: flex;
     max-width: 640px;
     height: 105px;
-    gap: 75px;
-    margin: 30px 20px 0 20px;
-    justify-content: space-between;
+    margin: 30px 64px 0 64px;
     padding-top: 0;
+    justify-content: flex-start;
   }
   .header_picture {
     display: flex;
     max-width: 1000px;
     height: 500px;
-    margin-top: 30px;
+    margin-top: 30.29px;
     background-image: linear-gradient(rgba(0, 0, 0, 0) 40.1%, #000000 97.4%),
       url(/img/background_1000\ .png);
     background-size: cover;
     background-position: 50%;
     background-repeat: no-repeat;
   }
+
   .logo {
     display: flex;
     width: 73.2px;
     height: 105px;
+    margin-left: 243px;
+    margin-right: 154px;
   }
   .nav_menu {
-    display: flex;
-    width: 582px;
-    height: 27px;
-    margin-top: 39px;
-    gap: 65px;
-    justify-content: space-between;
-    align-items: center;
+    display: none;
   }
   .nav_ul {
     list-style-type: none;
@@ -1562,11 +1632,23 @@ header {
   .header_text {
     display: flex;
     margin: 254px 609.62px 48px 18.87px;
-    width: 789.51px;
+    width: 684px;
     height: 120px;
     opacity: 0px;
     flex-direction: column;
     justify-content: space-between;
+  }
+  .text_1 {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 60px;
+    text-align: left;
+    color: white;
+    margin-bottom: 20px;
+    width: 684px;
+    height: 120px;
   }
   .content {
     display: flex;
@@ -1582,10 +1664,22 @@ header {
     height: 111px;
     margin-top: 120px;
   }
+  .citation_text {
+    display: flex;
+    font-family: Cormorant;
+    font-size: 40px;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 48.44px;
+    text-align: center;
+    color: #151618;
+    width: 640px;
+    height: 111px;
+  }
   .teas {
     display: flex;
-    width: 960px;
-    max-height: 325px;
+    width: 638px;
+    max-height: 100%;
     flex-direction: column;
     justify-content: space-around;
     margin-bottom: 120px;
@@ -1605,11 +1699,20 @@ header {
   .teas_pic {
     display: flex;
     width: 960px;
-    height: 247px;
+    height: 100%;
     margin-top: 30px;
     gap: 0px;
     flex-direction: row;
     justify-content: space-around;
+  }
+  .teas_ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    width: 638px;
+    height: 582px;
+    justify-content: center;
+    flex-wrap: wrap;
   }
   .teas_li {
     display: flex;
@@ -1628,22 +1731,22 @@ header {
   .teas_li:not(:first-child) {
     display: flex;
     flex-direction: column;
-    transform: translateX(-30px);
+    transform: translateX(0px);
   }
   .teas_li:nth-child(3) {
     display: flex;
     flex-direction: column;
-    transform: translateX(-40px);
+    transform: translateX(0px);
   }
   .teas_li:nth-child(4) {
     display: flex;
     flex-direction: column;
-    transform: translateX(-55px);
+    transform: translateX(0px);
   }
   .teas_li:nth-child(5) {
     display: flex;
     flex-direction: column;
-    transform: translateX(-65px);
+    transform: translateX(0px);
   }
   .tea_pic {
     display: flex;
@@ -1651,17 +1754,10 @@ header {
     max-height: 208px;
     gap: 0px;
   }
-  .teas_ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: center;
-  }
   .testimonials {
     display: flex;
-    width: 100%;
-    height: 397px;
+    width: 768px;
+    height: 596px;
     gap: 0px;
     opacity: 0.5px;
     background: #f7f2ea;
@@ -1671,12 +1767,22 @@ header {
   }
   .testi {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    max-width: 892px;
-    height: 169px;
-    opacity: 0px;
+    max-width: 768px;
+    height: 100%;
     justify-content: space-around;
     margin-bottom: 60px;
+    margin-top: 60px;
+  }
+  .testi_ul {
+    gap: 30px;
+    display: flex;
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   .testi_li {
     max-width: 280px;
@@ -1685,7 +1791,7 @@ header {
     flex-direction: column;
   }
   .testi_li:last-child {
-    display: none;
+    display: flex;
     max-width: 280px;
     height: 169px;
     opacity: 0px;
@@ -1693,8 +1799,8 @@ header {
   }
   .blog {
     display: flex;
-    max-width: 940px;
-    height: 592px;
+    max-width: 768px;
+    height: 100%;
     justify-content: space-around;
     align-items: center;
     margin: auto;
@@ -1708,34 +1814,38 @@ header {
   .blog_article {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 500px;
-    gap: 40px;
+    width: 640px;
+    height: 1029px;
+    gap: 30px;
     justify-content: flex-start;
+  }
+  .article_2,
+  .article_4 {
+    margin-left: 98px;
   }
   .article_1 {
     display: flex;
     flex-direction: row;
-    max-width: 460px;
-    height: 153px;
+    max-width: 100%;
+    width: 542px;
+    height: 180px;
     row-gap: 20px;
-    opacity: 0px;
     justify-content: flex-start;
   }
   .article_1_pic {
-    width: 230px;
-    height: 153px;
+    width: 270px;
+    height: 180px;
   }
   .blog_div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 180px;
-    height: 150px;
+    width: 252px;
+    height: 180px;
   }
   .article_text_1 {
     display: flex;
-    width: 210px;
+    width: 252px;
     height: 86px;
     font-family: Cormorant;
     font-size: 24px;
@@ -1783,10 +1893,10 @@ header {
   }
   .subscribe {
     display: flex;
-    max-width: 1000px;
+    max-width: 769px;
     width: 100%;
-    height: 495px;
-    margin-top: 120px;
+    height: 525px;
+    margin-top: 121px;
     background-color: #f7f2ea;
     background-image: url(/img/sub_pic.png);
     background-repeat: no-repeat;
@@ -1795,10 +1905,10 @@ header {
   }
   .sub_text {
     display: flex;
-    max-width: 780px;
-    height: 200px;
+    width: 640px;
+    height: 250px;
     flex-direction: column;
-    margin: 60px 110px 0px 110px;
+    margin: 59px 65px 0px 64px;
     justify-content: flex-start;
     gap: 0px;
     align-items: center;
@@ -1822,21 +1932,22 @@ header {
     text-align: left;
     color: #151618;
     text-align: center;
-    width: 780px;
+    width: 640px;
+    height: 120px;
   }
   .sub_form {
     display: flex;
     max-width: 580px;
     height: 117px;
     margin-top: 60px;
-    margin-left: 210px;
+    margin-left: 96px;
     flex-direction: column;
   }
   .prioritise {
     display: flex;
-    max-width: 757px;
+    max-width: 768px;
     height: 489px;
-    margin-top: 120px;
+    margin-top: 119px;
     width: 100%;
     flex-direction: column;
     gap: 0px;
@@ -1856,7 +1967,7 @@ header {
   .prioritise_frame {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1000px;
+    max-width: 638px;
     height: 100%;
     margin-top: 60px;
     row-gap: 30px;
@@ -1883,7 +1994,7 @@ header {
     width: 100%;
     height: 41px;
     color: #151618;
-    justify-content:center;
+    justify-content: center;
   }
   .frame_text_2 {
     display: flex;
@@ -1896,7 +2007,7 @@ header {
     height: 27px;
     margin-top: 10.03px;
     justify-content: center;
-    justify-content:center;
+    justify-content: center;
     font-style: big;
   }
   .prioritise_frame_3 {
@@ -1912,8 +2023,8 @@ header {
   }
   .footer {
     display: flex;
-    max-width: 1000px;
-    height: 593px;
+    max-width: 768px;
+    height: 631px;
     background-color: #f7f2ea;
     margin-top: 120px;
     flex-direction: column;
@@ -1921,10 +2032,10 @@ header {
   .footer_info {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
-    height: 400px;
-    margin-top: 100px;
+    height: 479px;
+    margin-top: 50px;
   }
   .footer_menu {
     display: flex;
@@ -1955,18 +2066,133 @@ header {
     display: flex;
     width: 270px;
     height: 287px;
-    margin-left: 55px;
+    margin-left: -267px;
     flex-direction: column;
+    margin-top: 212px;
   }
   .footer_bottom {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 314px;
+    width: 305px;
     height: 22px;
-    margin-top: 55px;
+    margin-top: 70px;
     margin-left: 20px;
     margin-bottom: 10px;
   }
-  
+  .burger {
+    display: flex;
+    background-color: transparent;
+    border: 0;
+    width: 40px;
+    height: 18px;
+    margin-top: 43px;
+  }
+  .burger:hover{
+    background-color:grey;
+    cursor: pointer;
+  }
+
+  .burger_menu {
+    display: none;
+    flex-direction: column;
+    width: 360px;
+    height: 691px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    margin: 0px 0px 0px 200px;
+    border:1px solid black;
+  }
+  .b_menu {
+    display: flex;
+    width: 71px;
+    height: 265px;
+    gap: 30px;
+    margin-left: 145px;
+    margin-top: 20px;
+  }
+  .b_menu_ul {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+  }
+  .b_menu_li {
+    display: flex;
+    list-style-type: none;
+    display: flex;
+    width: 100%;
+  }
+  .b_a {
+    display: flex;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+    font-family: Cormorant;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.06px;
+    text-align: left;
+    height: 29px;
+    gap: 0px;
+    opacity: 0px;
+  }
+  .b_pic {
+    display: flex;
+    width: 300px;
+    height: 2px;
+    margin: 60px 30px 60px 30px;
+  }
+  .b_contacts {
+    display: flex;
+    width: 127px;
+    height: 124px;
+    margin-left: 117px;
+    gap: 35px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .b_cont_a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    font-family: Open Sans;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17.7px;
+    text-align: left;
+  }
+  .b_bag_acc_search {
+    display: flex;
+    width: 360px;
+    height: 60px;
+    background-color: #f7f2ea;
+    margin-top: 60px;
+  }
+  .b_bag_a {
+    display: flex;
+    width: 200px;
+    height: 22px;
+    margin: 20px 79px 18px 81px;
+    gap: 70px;
+    justify-content: center;
+  }
+  .hidden{
+    display: flex;
+    background-color:transparent;
+    border:0;
+    margin: 20px 20px 0px 320px;
+  }
+  .hidden:hover{
+    background-color:#f7f2ea;;
+    cursor: pointer;
+  }
+  .shadow{
+    background-color:whitesmoke;
+    opacity: 0.2;
+    transition: 0.1s;
+  }
 }
